# persona-engine

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
configs/examples/: consistency_only.yaml  depressed_patient.yaml  mania_patient.yaml  student_persona.yaml
loom/: __init__.py  cli.py
loom/assembler/: __init__.py  injection.py  intensity.py  prompt_builder.py  templates.py
loom/monitors/: base.py  repetition.py  stagnation.py
loom/runner/: __init__.py  api_client.py  rollout.py  transcript.py
loom/schema/: __init__.py  config.py  defaults.py  loader.py
tests/: conftest.py
tests/integration/: test_rollout.py
tests/unit/: test_assembler.py  test_injection.py  test_intensity.py  test_monitors.py  test_rollout.py  test_schema.py
